# rf2_league_mod_tool

./: .gitignore  Cargo.toml  README.md  build.rs  build_all_tgts
.github/workflows/: build.yml  cd.yml  check.yml  ci.yml
example/: config.json  new_config.json
example/templates/Porsche_992_GT3_Cup_2022/: LEAGUE_MOD_Upgrades.ini  VRGTM2022-2_Upgrades.ini  VRGTMUpgrades.ini  (+2 more)
previous_source/src/: main.go
rf2_league_creator/: Cargo.toml
rf2_league_creator/src/: error.rs  lib.rs
rf2_league_creator/tests/: mod_creation_test.rs
rf2_league_tool/: Cargo.toml
rf2_league_tool/src/: image_handler.rs  lib.rs  os_methods.rs
rf2_league_tool/src/controller/: config_state_controller.rs  generator_controller.rs
rf2_league_tool/src/view/: mod.rs
rf2_league_tool/ui/: app-paths-bar.slint  configuration.slint  generator-popup.slint  main.slint
rf2_league_tool/ui/components/: file-selection.slint
rf2_league_tool/ui/controller/: rfactor2-path.slint  workshop-path.slint
rf2_league_tool/ui/pages/: cars-config.slint  drivers-config.slint  league-config.slint
src/: config.rs  lib.rs  main.rs  os_methods.rs
src/controller/: generator_controller.rs  modmgr_path_controller.rs  workshop_path_controller.rs
src/models/: car.rs  company.rs  driver.rs  league.rs  mod.rs  paths.rs  person.rs
src/tasks/: copy_files.rs  create_veh_file.rs  mod.rs
src/view/: log_window.rs  mod.rs
tests/example_files/: config.json
ui/: demo.slint  generator-popup.slint  hello.slint  main.slint
ui/components/: app-paths.slint
ui/pages/: cars-config.slint  league-config.slint
(+32 files in other folders)
